--- a/index.html
+++ b/index.html
@@ -12,19 +12,21 @@
     <h2>DevOff Desafío 1</h2>
     <br>
     
-    <div class="gallery">      
-      <img src="./fotos/01.jpg" alt="foto 01">
-      <img src="./fotos/02.jpg" alt="foto 02">
-      <img src="./fotos/03.jpg" alt="foto 03">
-      <img src="./fotos/04.jpg" alt="foto 04">
-      <img src="./fotos/05.jpg" alt="foto 05">
-      <img src="./fotos/06.jpg" alt="foto 06">
-      <img src="./fotos/07.jpg" alt="foto 07">
-      <img src="./fotos/08.jpg" alt="foto 08">
-      <img src="./fotos/09.jpg" alt="foto 09">
-      <img src="./fotos/10.jpg" alt="foto 10">
-      <img src="./fotos/11.jpg" alt="foto 11">
-      <img src="./fotos/12.jpg" alt="foto 12">     
+    <div class="gallery"> 
+      <div class="imagen"><img src="./fotos/01.jpg" alt="foto 01"></div>
+      <div class="imagen"><img src="./fotos/02.jpg" alt="foto 02"></div>
+      <div class="imagen"><img src="./fotos/03.jpg" alt="foto 03"></div>
+      <div class="imagen"><img src="./fotos/04.jpg" alt="foto 04"></div>
+      <div class="imagen"><img src="./fotos/05.jpg" alt="foto 05"></div>
+      <div class="imagen"><img src="./fotos/06.jpg" alt="foto 06"></div>
+      <div class="imagen"><img src="./fotos/07.jpg" alt="foto 07"></div>
+      <div class="imagen"><img src="./fotos/08.jpg" alt="foto 08"></div>
+      <div class="imagen"><img src="./fotos/09.jpg" alt="foto 09"></div>
+      <div class="imagen"><img src="./fotos/10.jpg" alt="foto 10"></div>
+      <div class="imagen"><img src="./fotos/11.jpg" alt="foto 11"></div>
+      <div class="imagen"><img src="./fotos/12.jpg" alt="foto 12"> </div>   
+
+          
     </div>
   </div>  
 </body>
