finished web with information about me

--- a/index.html
+++ b/index.html
@@ -4,29 +4,37 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Caveat&family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/96fa369135.js" crossorigin="anonymous"></script>
   <title>DEVoff Desafío 1</title>
 </head>
 <body>
   <div class="container">
-    <h2>DevOff Desafío 1</h2>
+    <h2>Devoff Desafío 1</h2>
     <br>
     
     <div class="gallery"> 
-      <div class="imagen"><img src="./fotos/01.jpg" alt="foto 01"></div>
-      <div class="imagen"><img src="./fotos/02.jpg" alt="foto 02"></div>
-      <div class="imagen"><img src="./fotos/03.jpg" alt="foto 03"></div>
-      <div class="imagen"><img src="./fotos/04.jpg" alt="foto 04"></div>
-      <div class="imagen"><img src="./fotos/05.jpg" alt="foto 05"></div>
-      <div class="imagen"><img src="./fotos/06.jpg" alt="foto 06"></div>
-      <div class="imagen"><img src="./fotos/07.jpg" alt="foto 07"></div>
-      <div class="imagen"><img src="./fotos/08.jpg" alt="foto 08"></div>
-      <div class="imagen"><img src="./fotos/09.jpg" alt="foto 09"></div>
-      <div class="imagen"><img src="./fotos/10.jpg" alt="foto 10"></div>
-      <div class="imagen"><img src="./fotos/11.jpg" alt="foto 11"></div>
-      <div class="imagen"><img src="./fotos/12.jpg" alt="foto 12"> </div>   
+      <div class="imagen"><img src="./assets/fotos/01.jpg" alt="foto 01"></div>
+      <div class="imagen"><img src="./assets/fotos/02.jpg" alt="foto 02"></div>
+      <div class="imagen"><img src="./assets/fotos/03.jpg" alt="foto 03"></div>
+      <div class="imagen"><img src="./assets/fotos/04.jpg" alt="foto 04"></div>
+      <div class="imagen"><img src="./assets/fotos/05.jpg" alt="foto 05"></div>
+      <div class="imagen"><img src="./assets/fotos/06.jpg" alt="foto 06"></div>
+      <div class="imagen"><img src="./assets/fotos/07.jpg" alt="foto 07"></div>
+      <div class="imagen"><img src="./assets/fotos/08.jpg" alt="foto 08"></div>
+      <div class="imagen"><img src="./assets/fotos/09.jpg" alt="foto 09"></div>
+      <div class="imagen"><img src="./assets/fotos/10.jpg" alt="foto 10"></div>
+      <div class="imagen"><img src="./assets/fotos/11.jpg" alt="foto 11"></div>
+      <div class="imagen"><img src="./assets/fotos/12.jpg" alt="foto 12"> </div>   
+    </div>
 
-          
+    <div class="information">
+      <h3>Óscar Moreira Estévez</h3>
+      <div class="icons">
+        <a href="https://twitter.com/OscarMoreira1"><i class="fab fa-twitter-square icon"></i></a>
+        <a href="https://github.com/omorest"><i class="fab fa-github icon"></i></a>
+        <a href="https://www.linkedin.com/in/oscarmoreira/"><i class="fab fa-linkedin icon"></i></a>
+      </div>
     </div>
   </div>  
 </body>
