Change title name

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div class="container">
-    <h2>Devoff Desafío 1</h2>
+    <h2><i><</i>DEVoff!> Desafío 1</h2>
     <br>
     
     <div class="gallery"> 
