--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 <body>
   <div class="container">
-    <h2><i><</i>DEVoff!> Desafío 1</h2>
+    <div class="titleNav"><h2><i><</i>DEVoff!> Desafío 1</h2></div>
+    
     <br>
     
     <div class="gallery"> 
